--- a/index.html
+++ b/index.html
@@ -313,7 +313,18 @@
         </section>
 
         <footer class="footer">
-            footer
+            <ul class="nav">
+                <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Download home planner</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Come work with us!</a></li>
+            </ul>
+            <p class="copyright">
+                &copy; Copyright 2018 recreated by Parul Singh. Created to perform hands on for advance css concepts. This project
+                is NOT intented to take credits for the designs created by original author. 
+            </p>
         </footer>
 
     </body>
